globus-rsl (10.2-1+gt6.@distro@) @distro@; urgency=low

  * Maintainer mode

 -- Globus Toolkit <support@globus.org>  Sat, 01 Feb 2014 15:21:07 -0500

globus-rsl (10.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix missing check for flex

 -- Globus Toolkit <support@globus.org>  Fri, 31 Jan 2014 08:40:13 -0500

globus-rsl (10.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 11:54:03 -0500

globus-rsl (9.1-4) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-rsl (9.1-3) unstable; urgency=low

  * Update version for 5.2.1

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:34 -0500

globus-rsl (9.1-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-rsl (9.1-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-rsl (9.1-0) unstable; urgency=low

  * Update for 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 22 Nov 2011 09:42:10 -0500

globus-rsl (9.1-0) unstable; urgency=low

  * fix library soname dependencies when soname is 0

 -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 11:05:13 -0400

globus-rsl (9.1-0) unstable; urgency=low

  * fix libdir in perl initializer

 -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 10:20:30 -0400

globus-rsl (9.1-0) unstable; urgency=low

  * Update to 5.1.2

 -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 10:13:10 -0400

globus-rsl (8.1-0GT5.1.2a) unstable; urgency=low

  * Non-maintainer upload

 -- Globus Toolkit <support@globus.org>  Fri, 29 Jul 2011 13:50:31 -0400

globus-rsl (7.2-2) unstable; urgency=low

  * Converting to package format 3.0 (quilt)
  * Add new build dependency on texlive-font-utils due to changes in texlive