@@ -1,7 +1,7 @@
 Source: globus-rsl
 Priority: optional
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Build-Depends: debhelper (>= 5), autotools-dev, libglobus-common-dev, doxygen (<< 1.6.2-1) | doxygen (>> 1.6.2-1), graphviz
+Build-Depends: debhelper (>= 5), autotools-dev, libglobus-common-dev (>= 14), doxygen (<< 1.6.2-1) | doxygen (>> 1.6.2-1), graphviz, pkg-config, flex, bison
 Standards-Version: 3.8.4
 Section: net
 Homepage: http://www.globus.org/
