@@ -1,3 +1,9 @@
+globus-rsl (10.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 15:39:52 -0500
+
 globus-rsl (10.2-1+gt6.@distro@) @distro@; urgency=low
 
   * Maintainer mode
